[package]
name = "iam"
version = "0.1.0"
authors = ["AWS ElastiCach, <JanRaak@amazon.com>"]
edition = "2018"
build="build.rs"


[lib]
crate-type = ["cdylib"]

[dependencies]
redis-module = { version="*", features = ["experimental-api"]}
# Execute:  sudo apt-get install libssl-dev
#           sudo apt-get install awscli
async-std = {version="1", features=["attributes", "tokio1"]}
openssl = "0.10.33"
rusoto_core = {version = "0.47.0", default_features = false, features=["rustls"]}

rusoto_credential = "0.47.0"
rusoto_iam = {version = "0.47.0", default_features = false, features=["rustls"]}

futures = "0.3.15"
tokio = {version="1.0", features=["process"] }
walkdir = "2.2.4"
glob = "*"
scan_dir = "*"
run_script = "*"
serde = "1.0"
serde_derive = "1.0.126"
serde_json = "1.0.64"
lazy_static = "*"
rust-crypto = "*"
aws-sigv4 = "*"
j4rs = "*"
reqwest = {version="^0.11.2", features=["json"]}
bytes = "1.0.0"
env_logger = "0"

[build-dependencies]
bindgen = "*"
cc = "*"
fs = "*"


[features]
static_ssl = ['openssl/vendored']

